Ingress/working-sample.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appsingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - backend:
          service:
            name: dotnetapp
            port:
              number: 80
        path: /dotnet(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: shuttle
            port:
              number: 80
        path: /shuttle(/|$)(.*)
        pathType: Prefix
      - backend:
          service:
            name: httpd
            port:
              number: 80
        path: /(.*)
        pathType: Prefix
